# ai-chat-protocol-python

./: README.md  pyproject.toml
src/ai_chat_protocol/: __init__.py
src/ai_chat_protocol/models/: __init__.py  base.py  chat_completion.py  chat_completion_param.py  chat_completion_param_model.py  chat_completion_param_pydantic.py  error.py  file_param.py  file_param_pydantic.py  message.py  message_param.py  message_param_model.py  message_param_pydantic.py  role.py  type_var.py
